// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Live Props 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </button>
</div>
`;

exports[`Storyshots Button.Color Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-7z7a5n"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-g292r5"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Primary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Color Secondary 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    OUTLINE
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    TEXT
  </button>
</div>
`;

exports[`Storyshots Button.Shape Circle 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-fjsbt8"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    DEFAULT
  </button>
  <button
    className="css-182y61d"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    PRIMARY
  </button>
  <button
    className="css-j08ou9"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="circle"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Shape Rounded 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-19ri1qw"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    DEFAULT
  </button>
  <button
    className="css-1rn1mlq"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    PRIMARY
  </button>
  <button
    className="css-n3axsg"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="rounded"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.State Disabled 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-7z7a5n"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
  <button
    className="css-g292r5"
    color="default"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={true}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.State Loading 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-2ejxgz"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-zkj8nq"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-8ru81c"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-cf2hzo"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1jw2y6l"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-jr3rx"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
  <button
    className="css-1j9pmef"
    color="default"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    DEFAULT
  </button>
  <button
    className="css-1o32oxy"
    color="primary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    PRIMARY
  </button>
  <button
    className="css-19y65w8"
    color="secondary"
    disabled={false}
    shape="default"
  >
    <svg
      className="_loader"
    >
      loader.svg
    </svg>
    SECONDARY
  </button>
  <br />
</div>
`;

exports[`Storyshots Button.Variant Default 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1iui0yr"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1bz4i4n"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-18mk5p8"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-7z7a5n"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-1d3pd55"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-5ilodz"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button.Variant Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-g292r5"
    color="default"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    DEFAULT
  </button>
  <button
    className="css-6d8xa9"
    color="primary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    PRIMARY
  </button>
  <button
    className="css-lr62rp"
    color="secondary"
    disabled={false}
    onClick={[Function]}
    shape="default"
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Checkbox Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-gjhifb"
      color="default"
      shape="default"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1ybqmd5"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1iiqnrr"
      color="default"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Primary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ndznmz"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-eg0i81"
      color="primary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Color Secondary 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-13y257h"
      color="secondary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-x1j67p"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Circle 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1iiqnrr"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-eg0i81"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-x1j67p"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.Shape Rounded 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-1ybqmd5"
      color="default"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-ndznmz"
      color="primary"
      shape="rounded"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-13y257h"
      color="secondary"
      shape="rounded"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      checked={false}
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Checkbox.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-rr698"
      color="default"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-p2t2p4"
      color="primary"
      shape="default"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      defaultChecked={true}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <i
      className="css-jnubft"
      color="secondary"
      shape="default"
    />
  </label>
</div>
`;

exports[`Storyshots Expansion Panel Live Props 1`] = `
<div
  className="css-14973vb"
>
  <header
    className="css-etwn3d"
  >
    <h2>
      Expansion Title
    </h2>
    <button
      className="css-1ege60k"
      color="default"
      disabled={false}
      onClick={[Function]}
      shape="circle"
    >
      <svg>
        plus.svg
      </svg>
    </button>
  </header>
</div>
`;

exports[`Storyshots Radio Live Props 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-6licz0"
      color="default"
      shape="circle"
    />
    Change my appearance from 
    <strong>
      "Knobs"
    </strong>
     tab
  </label>
</div>
`;

exports[`Storyshots Radio.Color Default 1`] = `
<div
  className="css-jyjmas"
>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1x7ytu0"
      color="default"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1c0yn5h"
      color="primary"
      shape="circle"
    />
  </label>
  <label
    className="css-12v1e3v"
  >
    <input
      className="css-1rnm75w"
      disabled={false}
      name="radio"
      onChange={[Function]}
      type="radio"
    />
    <i
      className="css-1lscehh"
      color="secondary"
      shape="circle"
    />
  </label>
</div>
`;

exports[`Storyshots Switch Live Props 1`] = `
<div
  className="css-14973vb"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="c5076a0c-9f7c-4f52-8f5d-4a4142190333"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-uuzt70"
    color="default"
    htmlFor="c5076a0c-9f7c-4f52-8f5d-4a4142190333"
  />
  Change my appearance from 
  <strong>
    "Knobs"
  </strong>
   tab
</div>
`;

exports[`Storyshots Switch.State Controlled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="021266bf-42ac-441e-81cc-35101192a768"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="021266bf-42ac-441e-81cc-35101192a768"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="d6c5b493-705a-48c3-8990-2b606008549b"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="d6c5b493-705a-48c3-8990-2b606008549b"
  />
  <input
    checked={false}
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={false}
    id="ef05411f-8cae-4a06-b225-fce34295a04f"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="ef05411f-8cae-4a06-b225-fce34295a04f"
  />
</div>
`;

exports[`Storyshots Switch.State Disabled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="72b89842-bd91-4a3a-bee6-7c964732eb11"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="72b89842-bd91-4a3a-bee6-7c964732eb11"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="84fc1cb6-377f-4905-94b1-3793ab2ecff6"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="84fc1cb6-377f-4905-94b1-3793ab2ecff6"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={false}
    disabled={true}
    id="c51c638d-82f5-4090-a69b-54fd46423751"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="c51c638d-82f5-4090-a69b-54fd46423751"
  />
</div>
`;

exports[`Storyshots Switch.State Uncontrolled 1`] = `
<div
  className="css-jyjmas"
>
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="44196c03-f1db-4a70-b1cf-c18643a68e31"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-arccat"
    color="default"
    htmlFor="44196c03-f1db-4a70-b1cf-c18643a68e31"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="3b6392c0-3b04-4eac-96fd-6e954d4b2248"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-15g7b4q"
    color="primary"
    htmlFor="3b6392c0-3b04-4eac-96fd-6e954d4b2248"
  />
  <input
    className="css-1rnm75w"
    defaultChecked={true}
    disabled={false}
    id="3b7001ae-c8e3-4596-bf0f-4a2f83a5c379"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-19k4clw"
    color="secondary"
    htmlFor="3b7001ae-c8e3-4596-bf0f-4a2f83a5c379"
  />
</div>
`;
